Fixed the 4 and 5 question filters.